change style of about, add music style

--- a/thought/music/index.html
+++ b/thought/music/index.html
@@ -53,7 +53,7 @@
     <!-- Posts Grid -->
     <section class="featured-grid">
         <a href="music-post1.html" class="featured-card card-1" data-scroll>
-            <div class="card-background" style="background-image: url('assets/images/card-1.jpg');"></div>
+            <div class="card-background" style="background-image: url('assets/images/hhh.jpg');"></div>
             <div class="card-content">
                 <span class="card-meta">Sonic Exploration</span>
                 <h2 class="card-title">The Architecture of Silence</h2>
@@ -65,7 +65,7 @@
         <a href="music-post2.html" class="featured-card card-2" data-scroll>
             <div class="card-background" style="background-image: url('assets/images/card-2.jpg');"></div>
             <div class="card-content">
-                <span class="card-meta">Rhythm & Melody</span>
+                <span class="card-meta">Sonic Exploration</span>
                 <h2 class="card-title">Fragments of Digital Dreams</h2>
                 <p class="card-excerpt">Pixels dance in ordered chaos, forming patterns only the subconscious recognizes...</p>
                 <span class="card-link">Discover →</span>
@@ -75,7 +75,7 @@
         <a href="music-post3.html" class="featured-card card-1" data-scroll>
             <div class="card-background" style="background-image: url('assets/images/card-3.jpg');"></div>
             <div class="card-content">
-                <span class="card-meta">Musical Journey</span>
+                <span class="card-meta">Sonic Exploration</span>
                 <h2 class="card-title">Echoes of Tomorrow</h2>
                 <p class="card-excerpt">Time moves in strange patterns, resonating forward through corridors of possibility...</p>
                 <span class="card-link">Journey →</span>
@@ -85,7 +85,7 @@
         <a href="music-post4.html" class="featured-card card-2" data-scroll>
             <div class="card-background" style="background-image: url('assets/images/card-4.jpg');"></div>
             <div class="card-content">
-                <span class="card-meta">Harmonic Theory</span>
+                <span class="card-meta">Sonic Exploration</span>
                 <h2 class="card-title">Rhythms of Chaos</h2>
                 <p class="card-excerpt">Order and disorder dance together in an eternal waltz of complexity...</p>
                 <span class="card-link">Experience →</span>
@@ -95,7 +95,7 @@
         <a href="music-post5.html" class="featured-card card-1" data-scroll>
             <div class="card-background" style="background-image: url('assets/images/card-5.jpg');"></div>
             <div class="card-content">
-                <span class="card-meta">Classical Music</span>
+                <span class="card-meta">Sonic Exploration</span>
                 <h2 class="card-title">Classical Music Appreciation</h2>
                 <p class="card-excerpt">Classical music represents a tradition that has evolved over centuries...</p>
                 <span class="card-link">Listen →</span>
@@ -103,10 +103,20 @@
         </a>
         
         <a href="music-post6.html" class="featured-card card-2" data-scroll>
-            <div class="card-background" style="background-image: url('assets/images/card-6.jpg');"></div>
+            <div class="card-background" style="background-image: url('assets/images/faye4.jpg');"></div>
             <div class="card-content">
-                <span class="card-meta">Musical Journey</span>
+                <span class="card-meta">Sonic Exploration</span>
                 <h2 class="card-title">Musical Journey</h2>
+                <p class="card-excerpt">Music has the power to transcend time and space, carrying emotions across generations...</p>
+                <span class="card-link">Play →</span>
+            </div>
+        </a>
+
+        <a href="music-post7.html" class="featured-card card-1" data-scroll>
+            <div class="card-background" style="background-image: url('assets/images/faye9.jpg');"></div>
+            <div class="card-content">
+                <span class="card-meta">Sonic Exploration</span>
+                <h2 class="card-title">Musical Experience</h2>
                 <p class="card-excerpt">Music has the power to transcend time and space, carrying emotions across generations...</p>
                 <span class="card-link">Play →</span>
             </div>
